# meetassist

./: CMakeLists.txt  README.md  cryptomus_471468c2.html  index.html
src/: main.cpp
src/auth/: auth.cpp  auth.h
src/services/: email_service.cpp  email_service.h  location_service.cpp  location_service.h  payment_service.cpp  payment_service.h
src/ui/: login_panel.cpp  login_panel.h  signup_panel.cpp  signup_panel.h
